2006-03-09  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpexport.c (gimp_export_image): offer the choice to
	Flatten or Merge Visible Layers (bug #332336).

2006-03-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: added accelerators for "close"
	and "quit" actions.

	* plug-ins/helpbrowser/dialog.c: added "close" to the popup menu.

2006-03-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_main.c (button_press): do not attempt to
	use a NULL function pointer.

	* plug-ins/imagemap/imap_preview.c: added some sanity checks.

2006-03-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: also add the popup menu to the
	standard playback window, not only to the detached one.

2006-03-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: register an icon, improved
	tooltips, some minor cleanups.

2006-03-08  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c (find_max_blob): free the whole list instead of
	deleting it one element at a time.

2006-03-06  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplay.c (gimp_display_reconnect): keep a
	reference on the old image until the display is connected to the
	new one. Fixes bug #333568.

	* app/display/gimpdisplay-handlers.c: fixed typo in comment.

	* app/actions/file-commands.c: cosmetics.

2006-03-05  DindinX  <dindinx@gimp.org>

	* app/core/gimpimage-merge.c: fixed merge down (previously broken by a
	not that purely cosmetic change). Spotted by Amar Takhar.

2006-03-04  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-save-dialog.c (file_save_dialog_use_extension):
	use descriptive verbs in action buttons instead of Yes and No.

2006-03-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcolordisplayeditor.c
	* app/widgets/gimpcontrollereditor.c
	* app/widgets/gimpcontrollerlist.c: set tooltips dynamically.

2006-03-03  Sven Neumann  <sven@gimp.org>

	* app/dialogs/vectors-import-dialog.c (vectors_import_dialog_new)